--- a/src/header.css
+++ b/src/header.css
@@ -29,9 +29,24 @@
 .header-wrapper h1 {
   font-size: 90px;
   font-weight: 1000;
+  margin-left: -20px;
   color: white;
-  padding-bottom: 20px;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(to right, var(--bright-blue), var(--bright-blue) 50%, white 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: background-position 750ms ease;
 }
+
+.header-wrapper h1:hover {
+  background-position: 0 100%;
+}
+
 
 .header-wrapper p {
   max-width: 550px;
