--- a/src/header.css
+++ b/src/header.css
@@ -15,7 +15,7 @@
 
 .header-wrapper h2 {
   font-size: 17px;
-  font-family: 'SF Mono Regular';
+  font-family: 'SF Mono Light';
   color: var(--bright-blue);
   padding-bottom: 20px;
 }
