--- a/src/general.css
+++ b/src/general.css
@@ -54,3 +54,35 @@ button:hover {
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(82, 84, 85);
 }
+
+/* headings */
+.headings {
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+.headings-title {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.headings-number {
+  font-family: 'SF Mono Regular';
+  color: var(--bright-blue);
+  font-size: 22px;
+  padding-top: 3px;
+  margin-right: 15px;
+}
+
+.headings-line {
+  height: 1px;
+  width: 280px;
+  max-width: 300px;
+  background-color: #6186be;
+  align-self: center;
+  justify-self: center;
+  margin-left: 30px;
+}
