--- a/src/header.css
+++ b/src/header.css
@@ -53,9 +53,89 @@
   display: inline;
 }
 
-@media (max-width:850px) {
+@media (max-width: 850px) {
   .header-section {
-    width: 100vw !important;
-    margin: 0px 20px;
+    width: 100vw;
+    margin: 0px 20px !important;
   }
+}
+
+/* quote box */
+.quote-wrapper {
+  display: flex;
+  padding: 0 20px;
+}
+
+.quote {
+  font-family: 'SF Mono Semibold';
+  width: 230px;
+  margin-top: 15px;
+}
+
+.quotebox {
+  position: relative;
+  color: var(--bright-blue);
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 130%;
+  margin: 0;
+  border: 2px solid #fff;
+  border: solid 2px;
+  border-radius: 20px;
+  padding: 25px;
+}
+
+.quotebox:after {
+  content: "";
+  position: absolute;
+  border: 2px solid var(--bright-blue);
+  border-radius: 0 30px 0 0;
+  width: 30px;
+  height: 30px;
+  bottom: -32px;
+  left: 40px;
+  border-bottom: none;
+  border-left: none;
+  z-index: 3;
+}
+
+.quotebox:before {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  border: 6px solid var(--bg-black);
+  bottom: -3px;
+  left: 40px;
+  z-index: 2;
+}
+
+.quote h4 {
+  position: relative;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+  margin: 0;
+  padding-top: 10px;
+  z-index: 1;
+  margin-left: 100px;
+  padding-left: 12px;
+}
+
+.quote-white {
+  color: white;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(to right, var(--bright-blue), var(--bright-blue) 50%, white 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: background-position 750ms ease;
+}
+
+.quote-white:hover {
+  background-position: 0 100%;
 }
