finished about me section

--- a/src/colour-palette.css
+++ b/src/colour-palette.css
@@ -1,5 +1,6 @@
 :root {
   --bg-black: #1c1d1e;
-  --bright-blue: #00bfff;
-  --text-blue: #bedae6;
+  --bright-blue: #0695e2;
+  --text-other: #68ced4;
+  --text-blue: #cacabf;
 }
