--- a/src/about.css
+++ b/src/about.css
@@ -1,22 +1,134 @@
 .about-section {
   max-width: 900px;
-  margin: 0px 22vw;
   padding: 100px 0px;
   height: fit-content;
+  margin: 0 auto;
 }
 
 .about-content {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .about-text {
   width: 500px;
 }
 
+.about-right {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.about-img-cover {
+  height: 280px;
+  width: 280px;
+  border-radius: 0 20px;
+  background-color: var(--bright-blue);
+  position: absolute;
+  top: 20px;
+  opacity: 0.5;
+  transition: opacity 0.25s 0.25s ease-in, height 0.25s ease-in, width 0.25s ease-in, top 0.25s ease-in;
+}
+
 .about-content img {
-  height: 200px;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px;
+}
+
+.about-box {
+  height: 300px;
+  width: 300px;
+  border: 2px solid var(--bright-blue);
+  border-radius: 20px;
+  top: 20px;
+  right: 20px;
+  position: absolute;
+  transition: top 0.25s ease-in, right 0.25s ease-in;
+}
+
+.about-box::after {
+  content: "";
+  position: absolute;
+  border: 2px solid var(--bright-blue);
+  border-radius: 0 35px 0 0;
+  width: 35px;
+  height: 35px;
+  bottom: 32px;
+  left: -37px;
+  border-bottom: none;
+  border-left: none;
+  z-index: 3;
+}
+
+.about-box::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 50px;
+  background-color: var(--bg-black);
+  border: 1px solid var(--bg-black);
+  left: -3px;
+  bottom: 40px;
+  z-index: 2;
+}
+
+.about-box:hover {
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+}
+
+.skills-title {
+  padding-top: 50px;
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-family: 'SF Mono Semibold';
+  margin-left: -20px;
+}
+
+.skill-bullet {
+  width: 0;
+  height: 0;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  border-left: 3px solid var(--bright-blue);
+  padding-right: 15px;
+}
+
+.skill-name {
+  font-family: 'SF Mono Regular';
+  color: var(--bright-blue);
+  font-size: 13px;
+  width: 90px;
+}
+
+.skill-bar {
+  background-color: #bedae630;
+  height: 6px;
   width: 200px;
-  border-radius: 30px;
+  border-radius: 2px;
+  align-self: center;
+  margin-left: 10px;
+  position: relative;
+}
+
+.skill-progress {
+  border-radius: 2px;
+  background-color: var(--bright-blue);
+  height: 6px;
+  margin-left: 30px;
+  align-self: center;
+  position: absolute;
+  margin-left: 0px;
+}
+
+.skills-container {
+  margin-left: -20px;
+  width: 100px;
+  display: grid;
+  grid-template-columns: 10px 90px 200px;
+  gap: 10px;
+  align-items: center;
 }
