--- a/src/header.css
+++ b/src/header.css
@@ -17,34 +17,22 @@
   font-size: 17px;
   font-family: 'SF Mono Light';
   color: var(--bright-blue);
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .header-wrapper h3 {
   font-size: 70px;
   padding-bottom: 20px;
   line-height: 100%;
+  display: flex;
 }
 
 .header-wrapper h1 {
   font-size: 90px;
   font-weight: 1000;
   margin-left: -20px;
-  color: white;
+  color: var(--text-other);
   padding: 20px;
-  position: relative;
-  overflow: hidden;
-  background: linear-gradient(to right, var(--bright-blue), var(--bright-blue) 50%, white 50%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 200% 100%;
-  background-position: 100%;
-  transition: background-position 750ms ease;
-}
-
-.header-wrapper h1:hover {
-  background-position: 0 100%;
 }
 
 
@@ -53,11 +41,42 @@
   display: inline;
 }
 
-@media (max-width: 850px) {
-  .header-section {
-    width: 100vw;
-    margin: 0px 20px !important;
+/* scroller */
+.text-scroller {
+  height: 1.2em;
+  line-height: 1.2em;
+  position: relative;
+  overflow: hidden;
+  width: 8em;
+  bottom: 8px;
+  left: 20px;
+}
+
+.text-scroller>span {
+  position: absolute;
+  top: 0;
+  animation: slide 10s infinite;
+  font-weight: bold;
+  height: 1.2em;
+}
+
+@keyframes slide {
+  0% {
+    top: 0;
   }
+
+  25% {
+    top: -1.2em;
+  }
+
+  50% {
+    top: -2.4em;
+  }
+
+  75% {
+    top: -1.2em;
+  }
+
 }
 
 /* quote box */
@@ -138,4 +157,10 @@
 
 .quote-white:hover {
   background-position: 0 100%;
+}
+
+@media (max-width: 850px) {
+  .header-section {
+    margin: 0px 20px !important;
+  }
 }
