--- a/src/about.css
+++ b/src/about.css
@@ -116,7 +116,7 @@
 
 .skill-progress {
   border-radius: 2px;
-  background-color: var(--bright-blue);
+  background-color: var(--text-blue);
   height: 6px;
   margin-left: 30px;
   align-self: center;
