--- a/src/general.css
+++ b/src/general.css
@@ -66,7 +66,7 @@ button:hover {
 }
 
 .headings-title {
-  font-size: 25px;
+  font-size: 28px;
   font-weight: 700;
 }
 
@@ -86,4 +86,13 @@ button:hover {
   align-self: center;
   justify-self: center;
   margin-left: 30px;
+}
+
+/* footer */
+.footer {
+  width: 100vw;
+  height: 50px;
+  font-size: 12px;
+  padding: 15px;
+  text-align: center;
 }
