--- a/src/works.css
+++ b/src/works.css
@@ -6,3 +6,105 @@
   display: flex;
   flex-direction: column;
 }
+
+.work {
+  width: 1000px;
+  height: 360px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.work-img {
+  width: 570px;
+  height: 350px;
+  overflow: hidden;
+  background: var(--bright-blue);
+  border-radius: 5px;
+  box-shadow: 0px 10px 20px #0e0f0f6c;
+}
+
+.work img {
+  width: 570px;
+  height: 350px;
+  object-fit: cover;
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in;
+}
+
+.work img:hover {
+  opacity: 1;
+}
+
+
+.work-description {
+  width: 495px;
+  text-align: right;
+  position: relative;
+}
+
+.work-description h3 {
+  font-size: 14px;
+  font-family: 'SF Mono Light';
+  color: var(--bright-blue);
+  padding-bottom: 10px;
+}
+
+.work-description h1 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-top: -35px;
+  padding-bottom: 15px;
+}
+
+.work-description p {
+  padding-top: 150px;
+  font-size: 15px;
+  font-family: 'SF Mono Light';
+  color: var(--text-blue);
+}
+
+.description-box {
+  background-color: #1e2737;
+  width: 450px;
+  padding: 25px;
+  font-size: 15px;
+  box-shadow: 0px 10px 20px #0e0f0f6c;
+  border-radius: 8px;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.description-box:hover {
+  box-shadow: 0px 10px 20px #0e0f0f;
+}
+
+.link-icon {
+  color: var(--text-blue);
+  font-size: 20px;
+  padding-right: 15px;
+}
+
+.work-description a {
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(to right, var(--bright-blue), var(--bright-blue) 50%, white 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: background-position 750ms ease;
+}
+
+.work-description a:hover {
+  background-position: 0 100%;
+}
+
+.description-box a {
+  color: var(--bright-blue);
+  background-position: 0;
+  font-family: 'montserrat';
+}
