--- a/src/general.css
+++ b/src/general.css
@@ -96,3 +96,15 @@ button:hover {
   padding: 15px;
   text-align: center;
 }
+
+.reveal {
+  position: relative;
+  transform: translateY(50px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.revealed {
+  transform: translateY(0);
+  opacity: 1;
+}
