--- a/src/nav.css
+++ b/src/nav.css
@@ -1,5 +1,5 @@
 .nav-wrapper {
-  height: 100px;
+  height: 90px;
   width: 100vw;
   display: flex;
   top: 0;
@@ -18,6 +18,7 @@
   justify-content: space-between;
   padding: 0px 50px;
   width: 100%;
+  margin-top: 30px;
 }
 
 .menu-container a {
@@ -32,6 +33,9 @@
 
 .menu-item {
   padding: 15px;
+  opacity: 0;
+  transform: translateY(-30px);
+  transition: opacity .6s ease, transform .6s ease;
 }
 
 .menu-number {
@@ -40,13 +44,14 @@
   padding-right: 4px;
 }
 
-#home-button {
-  margin-top: 23px;
+.home {
+  opacity: 0;
 }
 
 .menu-container {
-  display: inline;
+  display: flex;
   font-size: 14px;
+  flex-direction: row;
 }
 
 
@@ -56,6 +61,13 @@
 
 .resume {
   margin-left: 20px;
+  margin-top: 0px;
+}
+
+#resume-nav {
+  transform: translateY(-30px);
+  opacity: 0;
+  transition: all 1s ease;
 }
 
 .nav-shadow {
@@ -64,10 +76,10 @@
 }
 
 .nav-colour-slide {
+  height: 40px;
   color: white;
   position: relative;
   overflow: hidden;
-  padding-top: 23px;
   background: linear-gradient(to right, white 50%, var(--bright-blue), var(--bright-blue) 50%);
   background-clip: text;
   -webkit-background-clip: text;
