--- a/src/header.css
+++ b/src/header.css
@@ -57,7 +57,7 @@
   line-height: 1.2em;
   position: relative;
   overflow: hidden;
-  width: 8em;
+  width: 340px;
   bottom: 8px;
   left: 20px;
 }
@@ -170,8 +170,47 @@
   background-position: 0 100%;
 }
 
+@media (max-width: 1000px) {
+  .title3 {
+    font-size: 3rem;
+  }
+
+  .title1 {
+    padding-bottom: 30px;
+  }
+
+  .title2 {
+    font-size: 4rem;
+    padding-bottom: 20px;
+  }
+
+
+}
+
 @media (max-width: 850px) {
   .header-section {
-    margin: 0px 20px !important;
+    padding: 0px 25px;
+    margin: 0;
+  }
+
+  .title4 {
+    font-size: 15px !important;
+    max-width: 85vw;
+  }
+
+}
+
+@media (max-width: 650px) {
+  .title3 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5px;
+
+  }
+
+  .text-scroller {
+    margin-top: 10px;
+    padding-left: 100px;
+    height: 1.2em;
   }
 }
