--- a/src/works.css
+++ b/src/works.css
@@ -16,16 +16,17 @@
 }
 
 .work-img {
-  width: 570px;
+  max-width: 570px;
   height: 350px;
   overflow: hidden;
   background: var(--bright-blue);
   border-radius: 5px;
   box-shadow: 0px 10px 20px #0e0f0f6c;
+
 }
 
 .work img {
-  width: 570px;
+  max-width: 570px;
   height: 350px;
   object-fit: cover;
   opacity: 0.5;
