--- a/src/works.css
+++ b/src/works.css
@@ -27,6 +27,7 @@
 
 .work img {
   max-width: 570px;
+  width: 50vw;
   height: 350px;
   object-fit: cover;
   opacity: 0.5;
@@ -109,3 +110,5 @@
   background-position: 0;
   font-family: 'montserrat';
 }
+
+@media (max-width: 1160px) {}
